--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <main>
             <h1>Tejiri Tohabru | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Tejiri Tohabru" width="200">
-            </p>Hello! my name is Tejiri Tohabru and i am fron Delta State, Nigeria.
-             i love styding and i'm also a current BYU Idaho student studing software development.
-             and also a member of the church of Jesus Christ of latter day saint. its nice to meet you all...</p>
+            </p>Hello! my name is Tejiri Tohabru and i am fron Delta State, Nigeria.</p>
+            <p>i love styding and i'm also a current BYU Idaho student studing software development.</p>
+            <p>and also a member of the church of Jesus Christ of latter day saint. its nice to meet you all...</p>
         </main>
         <footer>
             <p>©2024 👩‍🦰 Tejiri Tohabru 🌻 Delta State, Nigeria</p>
